--- a/src/styles.less
+++ b/src/styles.less
@@ -5,3 +5,4 @@
 @import '@delon/theme/layout-blank/style/index.less';
 @import './styles/index.less';
 @import './styles/theme.less';
+@import 'ng-zorro-antd/resizable/style/entry.less';
