--- a/src/app/routes/util/custom-report-maintenance/custom-report-maintenance.component.html
+++ b/src/app/routes/util/custom-report-maintenance/custom-report-maintenance.component.html
@@ -146,9 +146,9 @@
                 <nz-list-item *ngFor="let customReportParameter of currentCustomReport.customReportParameters">
                     <ng-container>
                         <nz-list-item-meta 
-                            nzDescription="{{ customReportParameter.name }}">
+                            nzDescription="{{ customReportParameter.name }} - {{ customReportParameter.displayText }}">
                             <nz-list-item-meta-title>
-                                {{ customReportParameter.displayText }}
+                                {{ 'CUSTOM-REPORT-PARAMETER-TYPE_' + customReportParameter.type | i18n}}
                             </nz-list-item-meta-title>
                         </nz-list-item-meta>
                         
@@ -189,9 +189,9 @@
                 <nz-list-item *ngFor="let customReportParameter of currentCustomReport.customReportParameters">
                     <ng-container>
                         <nz-list-item-meta 
-                            nzDescription="{{ customReportParameter.name }}">
+                            nzDescription="{{ customReportParameter.name }} - {{ customReportParameter.displayText }}">
                             <nz-list-item-meta-title>
-                                {{ customReportParameter.displayText }}
+                                {{ 'CUSTOM-REPORT-PARAMETER-TYPE_' + customReportParameter.type | i18n}}
                             </nz-list-item-meta-title>
                         </nz-list-item-meta>
                         
@@ -278,5 +278,26 @@
             </nz-form-item>
             </div>  
         </div>
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="16">
+            <nz-form-item nzFlex>
+                <nz-form-label [nzSpan]="10"  nzFor="type">
+                {{ 'type' | i18n }}
+                </nz-form-label>
+                <nz-form-control [nzSpan]="14">
+                    <nz-select   nz-input [(ngModel)]="newParameterType" 
+                    style="width: 250px"  >
+                    
+                        @for (type of customReportParameterTypes; track type) {
+                            <nz-option nzLabel="{{ 'CUSTOM-REPORT-PARAMETER-TYPE_' + type | i18n}}"
+                            [nzValue]="type">
+                            </nz-option>
+                        }     
+                    </nz-select>
+                </nz-form-control>
+            </nz-form-item>
+            </div>  
+        </div>
+
     </ng-container>
   </nz-modal>
